--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SnapMark | Instantly Convert Screenshots to Formatted Text</title>
+  <title>SnapMark | OCR Tool to Convert Screenshots to LaTeX, Markdown & More</title>
 
-  <meta name="description" content="SnapMark is a powerful Windows app that instantly converts screenshots of tables, formulas, and text into multiple formats like Markdown, LaTeX, and HTML. Free trial available.">
+  <meta name="description" content="Use SnapMark's OCR technology to instantly extract text, tables, and math equations from any screenshot. Convert images to clean Markdown, LaTeX, HTML, AsciiDoc, reStructuredText, and more.">
 
-  <meta property="og:title" content="SnapMark | Instantly Convert Screenshots to Formatted Text">
-  <meta property="og:description" content="Effortlessly convert screenshots of tables, formulas, and layouts into clean Markdown, LaTeX, or HTML with SnapMark for Windows.">
+  <meta property="og:title" content="SnapMark | OCR Tool to Convert Screenshots to LaTeX, Markdown & More">
+  <meta property="og:description" content="Effortlessly extract text, tables, and math from images and convert them into over a dozen formats, including Markdown, LaTeX, AsciiDoc, and reStructuredText.">
   <meta property="og:image" content="https://www.whatsnapai.com/ad_image_800_1.png">
   <meta property="og:url" content="https://www.whatsnapai.com/">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="SnapMark | Instantly Convert Screenshots to Formatted Text">
-  <meta name="twitter:description" content="Effortlessly convert screenshots of tables, formulas, and layouts into clean Markdown, LaTeX, or HTML with SnapMark for Windows.">
+  <meta name="twitter:title" content="SnapMark | OCR Tool to Convert Screenshots to LaTeX, Markdown & More">
+  <meta name="twitter:description" content="Effortlessly extract text, tables, and math from images and convert them into over a dozen formats, including Markdown, LaTeX, AsciiDoc, and reStructuredText.">
   <meta name="twitter:image" content="https://www.whatsnapai.com/ad_image_800_1.png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
       "priceCurrency": "USD",
       "description": "10 free trials are available, followed by a monthly subscription for SnapMark Pro."
     },
-    "description": "SnapMark is a powerful Windows tool that intelligently converts complex formulas, layouts, and tables from images into a variety of ready-to-use professional document formats, from Markdown and LaTeX to HTML, XML, AsciiDoc, and more.",
+    "description": "SnapMark is a powerful OCR tool for Windows that lets you extract text, tables, and math equations from images and convert them into over a dozen formats including Markdown, LaTeX, HTML, AsciiDoc, XML, and reStructuredText.",
     "url": "https://www.whatsnapai.com/"
   }
   </script>
@@ -45,38 +45,38 @@
     "@context": "https://schema.org",
     "@type": "FAQPage",
     "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "How is SnapMark priced?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "You can download and use SnapMark for free for 10 captures. After the trial ends, you can choose to subscribe to the Pro version to continue using all advanced features. We offer a flexible subscription plan that you can cancel at any time."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How do I receive my license key?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "After you complete your subscription, your license key will be sent to your email address immediately by our partner, Paddle.com."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Which versions of Windows are supported?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "SnapMark is fully compatible with Windows 10 and Windows 11."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "What if I get a new computer?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Your Pro access is tied to your subscription. Simply install the software on your new computer and activate it with the same license key. Each subscription allows activation on a reasonable number of personal devices simultaneously. You can view and manage your activated devices at any time through our 'Manage License' page."
-        }
-      }
+       {
+         "@type": "Question",
+         "name": "How is SnapMark priced?",
+         "acceptedAnswer": {
+           "@type": "Answer",
+           "text": "You can download and use SnapMark for free for 10 captures. After the trial ends, you can choose to subscribe to the Pro version to continue using all advanced features. We offer a flexible subscription plan that you can cancel at any time."
+         }
+       },
+       {
+         "@type": "Question",
+         "name": "How do I receive my license key?",
+         "acceptedAnswer": {
+           "@type": "Answer",
+           "text": "After you complete your subscription, your license key will be sent to your email address immediately by our partner, Paddle.com."
+         }
+       },
+       {
+         "@type": "Question",
+         "name": "Which versions of Windows are supported?",
+         "acceptedAnswer": {
+           "@type": "Answer",
+           "text": "SnapMark is fully compatible with Windows 10 and Windows 11."
+         }
+       },
+       {
+         "@type": "Question",
+         "name": "What if I get a new computer?",
+         "acceptedAnswer": {
+           "@type": "Answer",
+           "text": "Your Pro access is tied to your subscription. Simply install the software on your new computer and activate it with the same license key. Each subscription allows activation on a reasonable number of personal devices simultaneously. You can view and manage your activated devices at any time through our 'Manage License' page."
+         }
+       }
     ]
   }
   </script>
@@ -242,12 +242,14 @@
   .pricing-card ul li {
     margin-bottom: 15px;
     font-size: 1.1rem;
+    line-height: 1.6;
   }
   .pricing-card ul li::before {
     content: '✓';
     color: #28a745; /* a nice green checkmark */
     font-weight: 700;
     margin-right: 10px;
+    float: left;
   }
   .trust-badge {
     margin-top: 20px;
@@ -287,19 +289,19 @@
 
   <main>
     <section class="hero container">
-      <h1>Instantly Convert Screenshots to Formatted Text</h1>
-      <p>SnapMark is a powerful Windows tool that intelligently converts complex formulas, layouts, and tables from images into a variety of ready-to-use professional document formats, from Markdown and LaTeX to HTML, XML, AsciiDoc, and more. Say goodbye to retyping and start creating instantly.</p>
-      <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Free Download</a>
+      <h1>Extract Text & Formulas from any Screenshot</h1>
+      <p>SnapMark is a powerful OCR tool for Windows. It lets you instantly extract text, tables, and complex math equations from any screenshot and convert them into over a dozen formats including LaTeX, Markdown, HTML, AsciiDoc, XML, and reStructuredText.</p>
+      <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Free Download for Windows</a>
       <p class="trial-note">No credit card required, 10 free trials</p>
       <div class="hero-image-container">
         <div class="hero-image-wrapper">
-          <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMark App Interface 1">
+          <img src="https://www.whatsnapai.com/screenshot1.png" alt="SnapMark OCR software interface for Windows.">
         </div>
         <div class="hero-image-wrapper">
-          <img src="https://www.whatsnapai.com/screenshot2.png" alt="SnapMark App Interface 2">
+          <img src="https://www.whatsnapai.com/screenshot2.png" alt="One-click copy of extracted text to multiple formats.">
         </div>
         <div class="hero-image-wrapper">
-          <img src="https://www.whatsnapai.com/screenshot3.png" alt="SnapMark App Interface 3">
+          <img src="https://www.whatsnapai.com/screenshot3.png" alt="History panel showing past screenshot conversions.">
         </div>
       </div>
     </section>
@@ -309,31 +311,31 @@
       <div class="features-grid">
         <div class="feature-card">
           <h3>1. Capture</h3>
-          <p>Easily capture any part of your screen with a hotkey. Whether it's a formula, a table, or a paragraph, what you see is what you get.</p>
+          <p>Easily capture any part of your screen with a hotkey—a formula from a research paper, a table from a PDF, or a paragraph of text.</p>
         </div>
         <div class="feature-card">
           <h3>2. Recognize</h3>
-          <p>Our powerful AI engine instantly recognizes the content and intelligently structures it into clean, usable formatted text.</p>
+          <p>Our powerful OCR engine instantly recognizes the content and intelligently structures it into clean, usable text.</p>
         </div>
         <div class="feature-card">
           <h3>3. Copy & Paste</h3>
-          <p>One-click copy any output format you need—be it Markdown, LaTeX, or HTML—and paste it directly into your favorite editor or platform.</p>
+          <p>One-click copy any output format you need and paste it directly into your editor or publishing platform.</p>
         </div>
       </div>
     </section>
 
     <section class="container">
-      <h2>Built for Professionals and Students</h2>
+      <h2>Built for Academics, Developers, and Writers</h2>
       <div class="use-cases-grid">
         <div class="use-case-card">
-          <h3>Perfect Academic LaTeX</h3>
-          <p>Say goodbye to tedious manual formula entry. Generate perfect LaTeX code for your Overleaf or TeXstudio documents in seconds.</p>
-          <img src="https://www.whatsnapai.com/ad_image_800_2.png" alt="Recognizing Math Formulas">
+          <h3>Extract Math Equations to LaTeX</h3>
+          <p>Stop the tedious manual entry of equations. Use our OCR to grab any formula from a paper or website and get perfect LaTeX code in seconds.</p>
+          <img src="https://www.whatsnapai.com/ad_image_800_2.png" alt="A complex math equation extracted from an image and converted to perfect LaTeX code.">
         </div>
         <div class="use-case-card">
-          <h3>Effortless Markdown Writing</h3>
-          <p>Easily convert tables and formatted text from any source into clean Markdown, perfect for your technical docs, tutorials, and blog posts.</p>
-          <img src="https://www.whatsnapai.com/ad_image_800_1.png" alt="Converting Tables to Markdown">
+          <h3>Convert Image Tables to Markdown</h3>
+          <p>Easily extract tables from any screenshot or PDF into clean, structured Markdown, ready for your technical docs and blog posts.</p>
+          <img src="https://www.whatsnapai.com/ad_image_800_1.png" alt="A table in an image being extracted into clean Markdown format.">
         </div>
       </div>
     </section>
@@ -347,8 +349,8 @@
           <p class="billing-model">Billed after 10 free trials, cancel anytime</p>
           <ul>
             <li>Up to 100 screen captures per day</li>
-            <li>Export to multiple professional formats (Markdown, LaTeX, HTML+)</li>
-            <li>Advanced table and formula recognition</li>
+            <li>Advanced OCR for tables and math equations</li>
+            <li>Export to 11+ formats: Markdown, LaTeX, HTML, Text, AsciiDoc, Textile, bbCode, XML, SGML, wikiMarkup, and reStructuredText.</li>
             <li>Continuous version updates</li>
             <li>Priority email support</li>
           </ul>
@@ -382,6 +384,7 @@
   <footer>
     <div class="container">
       <p>
+        <a href="/blog/5-latex-productivity-tips-en.html" style="font-weight: 700;">Blog</a> |
         <a href="https://www.whatsnapai.com/terms_of_service.html">Terms of Service</a> |
         <a href="https://www.whatsnapai.com/privacy_policy.html">Privacy Policy</a> |
         <a href="https://www.whatsnapai.com/refund_policy.html">Refund Policy</a> |
