--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <section class="hero container">
       <h1>Extract Text & Formulas from any Screenshot</h1>
       <p>SnapMark is a powerful OCR tool for Windows. It lets you instantly extract text, tables, and complex math equations from any screenshot and convert them into over a dozen formats including LaTeX, Markdown, HTML, AsciiDoc, XML, and reStructuredText.</p>
-      <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Free Download for Windows</a>
+      <a href="https://apps.microsoft.com/store/detail/9PMB1X34Z40F?cid=DevShareMCLPCS" class="cta-link">Free Download for Windows</a>
       <p class="trial-note">No credit card required, 10 free trials</p>
       <div class="hero-image-container">
         <div class="hero-image-wrapper">
