--- a/thanks.html
+++ b/thanks.html
@@ -47,7 +47,7 @@
                 </div>
                 
                 <div class="next-steps">
-                    <a href="https://storage.googleapis.com/snapmark-installers/SnapmarkWinui_1.2.14.0_x64.msix" class="cta-link">Download the App Now</a>
+                    <a href="https://apps.microsoft.com/store/detail/9PMB1X34Z40F?cid=DevShareMCLPCS" class="cta-link">Download the App Now</a>
                 </div>
             </div>
         </div>
