--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
             --card-background: #ffffff;
             --border-color: #e2e8f0;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             margin: 0;
@@ -21,6 +23,7 @@
             color: var(--dark-text);
             line-height: 1.8;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -29,26 +32,35 @@
             border-radius: 10px;
             padding: 20px 40px 40px 40px;
         }
-        h1, h2, h3 {
+
+        h1,
+        h2,
+        h3 {
             color: var(--dark-text);
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 15px;
             margin-top: 30px;
         }
+
         h1 {
             text-align: center;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 1rem;
             color: var(--light-text);
         }
+
         a {
             color: var(--primary-color);
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
         .meta-info {
             text-align: center;
             font-size: 0.9rem;
@@ -57,48 +69,68 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
         <p class="meta-info">Last updated: August 1, 2025</p>
 
         <h3>1. Agreement Overview</h3>
-        <p>These Terms of Service ("Terms") constitute a legal agreement between you ("User") and whatsnapai ("us," "we," "our") regarding your use of the SnapMark software ("the Software"). By downloading, installing, or using the Software, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the Software.</p>
+        <p>These Terms of Service ("Terms") constitute a legal agreement between you ("User") and ZhongChao Han ("us,"
+            "we," "our") regarding your use of the SnapMark software ("the Software"). By downloading, installing, or
+            using the Software, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the
+            Software.</p>
 
         <h2>2. License Grant</h2>
-        <p>Subject to these Terms, we grant you a limited, non-exclusive, non-transferable, revocable license to install and use the Software on devices you own or control, solely for your personal or internal business use.</p>
+        <p>Subject to these Terms, we grant you a limited, non-exclusive, non-transferable, revocable license to install
+            and use the Software on devices you own or control, solely for your personal or internal business use.</p>
 
         <h2>3. Free Trial</h2>
-        <p>We offer a 10-use free trial for the Software. The trial period is intended to allow you to evaluate the Software's functionality before purchase. After the trial period ends, you will need to purchase a Pro version subscription to continue using the full features of the Software.</p>
+        <p>We offer a 10-use free trial for the Software. The trial period is intended to allow you to evaluate the
+            Software's functionality before purchase. After the trial period ends, you will need to purchase a Pro
+            version subscription to continue using the full features of the Software.</p>
 
         <h2>4. Paid Subscription and Payment</h2>
-        <p>When you upgrade from the free trial to SnapMark Pro, you agree to pay the applicable subscription fees. All payments are processed by our third-party payment partner, Paddle.com. By providing payment information, you agree to be bound by Paddle's terms and policies. Subscriptions will automatically renew for the period you select (e.g., monthly or annually) unless canceled before the end of the current subscription period.</p>
+        <p>When you upgrade from the free trial to SnapMark Pro, you agree to pay the applicable subscription fees. All
+            payments are processed by our third-party payment partner, Paddle.com. By providing payment information, you
+            agree to be bound by Paddle's terms and policies. Subscriptions will automatically renew for the period you
+            select (e.g., monthly or annually) unless canceled before the end of the current subscription period.</p>
 
         <h2>5. Acceptable Use</h2>
         <p>You agree not to use the Software in any way that:</p>
         <ul>
             <li>Violates any applicable laws or regulations.</li>
-            <li>Reverse engineers, decompiles, disassembles, or attempts to discover the source code of the Software.</li>
+            <li>Reverse engineers, decompiles, disassembles, or attempts to discover the source code of the Software.
+            </li>
             <li>Distributes, rents, leases, sells, sublicenses, or otherwise transfers rights to the Software.</li>
             <li>Removes or alters any copyright, trademark, or other proprietary notices in the Software.</li>
             <li>Is for any unlawful purpose or infringes on the rights of others.</li>
         </ul>
 
         <h2>6. Intellectual Property</h2>
-        <p>The ownership, title, and intellectual property rights in and to the Software and all its copies (including but not limited to all copyrights, patents, trademarks, and trade secrets) are owned by whatsnapai. These Terms do not transfer any ownership of the Software to you, but only grant you a limited right of use.</p>
+        <p>The ownership, title, and intellectual property rights in and to the Software and all its copies (including
+            but not limited to all copyrights, patents, trademarks, and trade secrets) are owned by ZhongChao Han. These
+            Terms do not transfer any ownership of the Software to you, but only grant you a limited right of use.</p>
 
         <h2>7. Termination</h2>
-        <p>This agreement will terminate automatically if you fail to comply with any of its provisions. Upon termination, you must immediately cease all use of the Software and destroy all copies of it.</p>
+        <p>This agreement will terminate automatically if you fail to comply with any of its provisions. Upon
+            termination, you must immediately cease all use of the Software and destroy all copies of it.</p>
 
         <h2>8. Disclaimer of Warranty</h2>
-        <p>The Software is provided "as is" without warranty of any kind, either express or implied. We do not warrant that the functions of the Software will meet your specific requirements or that its operation will be uninterrupted or error-free.</p>
+        <p>The Software is provided "as is" without warranty of any kind, either express or implied. We do not warrant
+            that the functions of the Software will meet your specific requirements or that its operation will be
+            uninterrupted or error-free.</p>
 
         <h2>9. Limitation of Liability</h2>
-        <p>In no event shall we be liable for any indirect, incidental, special, punitive, or consequential damages (including, but not limited to, loss of profits, data loss, or business interruption) arising out of the use or inability to use the Software, even if we have been advised of the possibility of such damages.</p>
+        <p>In no event shall we be liable for any indirect, incidental, special, punitive, or consequential damages
+            (including, but not limited to, loss of profits, data loss, or business interruption) arising out of the use
+            or inability to use the Software, even if we have been advised of the possibility of such damages.</p>
 
         <h2>10. Changes to Terms</h2>
-        <p>We reserve the right to modify these Terms at any time. All changes will be posted on our website. Your continued use of the Software after the changes are posted constitutes your acceptance of the revised Terms.</p>
-        
+        <p>We reserve the right to modify these Terms at any time. All changes will be posted on our website. Your
+            continued use of the Software after the changes are posted constitutes your acceptance of the revised Terms.
+        </p>
+
         <h2>11. Contact Us</h2>
         <p>If you have any questions about these Terms of Service, please contact us at:</p>
         <p style="text-align: center; margin: 20px 0;">
@@ -106,4 +138,5 @@
         </p>
     </div>
 </body>
+
 </html>
