--- a/index.html
+++ b/index.html
@@ -539,7 +539,10 @@
           License</a>
       </p>
       <p>Contact us: <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a></p>
+
       <p>&copy; 2025 SnapMark. All rights reserved.</p>
+      <p>Operated by: Zhongchao Han</p>
+      <p>Address: 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ, UNITED KINGDOM</p>
     </div>
   </footer>
 
