--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
       <p>&copy; 2025 SnapMark. All rights reserved.</p>
       <p>Operated by: Zhongchao Han</p>
-      <p>Address: 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ, UNITED KINGDOM</p>
+      <p>Address: 2nd Floor, Building 4, Future Center, Beiqijia Town, Changping District, Beijing, CHINA</p>
     </div>
   </footer>
 
