--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -132,9 +132,12 @@
         </p>
 
         <h2>11. Contact Us</h2>
-        <p>If you have any questions about these Terms of Service, please contact us at:</p>
+        <p>If you have any questions about these Terms of Service, please contact us:</p>
         <p style="text-align: center; margin: 20px 0;">
-            <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
+            <strong>Email:</strong> <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a>
+            <br>
+            <strong>Address:</strong> 2nd Floor, Building 4, Future Center, Beiqijia Town, Changping District, Beijing,
+            CHINA
         </p>
     </div>
 </body>
