--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+  <!-- Start cookieyes banner -->
+  <script id="cookieyes" type="text/javascript"
+    src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
+  <!-- End cookieyes banner -->
   <meta charset="UTF-8">
   <title>SnapMark | OCR Tool to Convert Screenshots to LaTeX, Markdown & More</title>
 
