--- a/refund_policy.html
+++ b/refund_policy.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript"
+        src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
+    <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refund Policy | SnapMark</title>
@@ -13,6 +18,7 @@
             --card-background: #ffffff;
             --border-color: #e2e8f0;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             margin: 0;
@@ -21,6 +27,7 @@
             color: var(--dark-text);
             line-height: 1.8;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -29,50 +36,67 @@
             border-radius: 10px;
             padding: 20px 40px 40px 40px;
         }
-        h1, h2 {
+
+        h1,
+        h2 {
             color: var(--dark-text);
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 15px;
             margin-top: 30px;
         }
+
         h1 {
             text-align: center;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 1.05rem;
             color: var(--light-text);
         }
+
         a {
             color: var(--primary-color);
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
         .meta-info {
             text-align: center;
             font-size: 0.9rem;
-            color: #718096; /* A lighter gray for meta info */
+            color: #718096;
+            /* A lighter gray for meta info */
             margin-bottom: 30px;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>SnapMark Refund Policy</h1>
         <p class="meta-info">Last updated: August 1, 2025</p>
 
-        <p>Thank you for choosing SnapMark. We are committed to providing excellent products and services, and we want you to be completely satisfied with your purchase. If for any reason you are not satisfied, we are here to help.</p>
+        <p>Thank you for choosing SnapMark. We are committed to providing excellent products and services, and we want
+            you to be completely satisfied with your purchase. If for any reason you are not satisfied, we are here to
+            help.</p>
 
         <h2>14-Day Money-Back Guarantee</h2>
-        <p>We offer a **14-day no-questions-asked money-back guarantee** for all first-time purchases of a SnapMark Pro subscription.</p>
-        <p>If you find that the product does not meet your expectations within **14 days** of purchasing your subscription, you can request a full refund. The refund period is calculated from the day your payment is successfully processed.</p>
+        <p>We offer a **14-day no-questions-asked money-back guarantee** for all first-time purchases of a SnapMark Pro
+            subscription.</p>
+        <p>If you find that the product does not meet your expectations within **14 days** of purchasing your
+            subscription, you can request a full refund. The refund period is calculated from the day your payment is
+            successfully processed.</p>
 
         <h2>Refund Eligibility</h2>
         <ul>
             <li>This policy applies only to a user's **first subscription purchase**.</li>
-            <li>Renewal fees are generally non-refundable, but we will consider them on a case-by-case basis. If you forgot to cancel your subscription and were charged, please contact us as soon as possible.</li>
-            <li>Licenses purchased through unofficial channels or third-party resellers are not eligible for this refund policy.</li>
+            <li>Renewal fees are generally non-refundable, but we will consider them on a case-by-case basis. If you
+                forgot to cancel your subscription and were charged, please contact us as soon as possible.</li>
+            <li>Licenses purchased through unofficial channels or third-party resellers are not eligible for this refund
+                policy.</li>
         </ul>
 
         <h2>How to Request a Refund</h2>
@@ -80,18 +104,24 @@
         <p style="text-align: center; margin: 20px 0;">
             <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
-        <p>In your email, please be sure to provide the following information so we can process your request quickly:</p>
+        <p>In your email, please be sure to provide the following information so we can process your request quickly:
+        </p>
         <ul>
             <li>The email address you used for the purchase.</li>
             <li>Your order number or transaction ID (you can find it in the receipt email sent by Paddle).</li>
         </ul>
 
         <h2>Refund Processing</h2>
-        <p>Upon receiving your refund request, we will review it within 2 business days. Once approved, the refund will be processed immediately by our payment partner, Paddle.com. It typically takes **5-10 business days** for the refund to appear on your bank or credit card statement, depending on your card-issuing bank.</p>
-        <p>Once the refund is successful, the SnapMark Pro license key associated with your account will be deactivated.</p>
+        <p>Upon receiving your refund request, we will review it within 2 business days. Once approved, the refund will
+            be processed immediately by our payment partner, Paddle.com. It typically takes **5-10 business days** for
+            the refund to appear on your bank or credit card statement, depending on your card-issuing bank.</p>
+        <p>Once the refund is successful, the SnapMark Pro license key associated with your account will be deactivated.
+        </p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions about our refund policy, feel free to contact us at <a href="mailto:support@whatsnapai.com">support@whatsnapai.com</a>.</p>
+        <p>If you have any questions about our refund policy, feel free to contact us at <a
+                href="mailto:support@whatsnapai.com">support@whatsnapai.com</a>.</p>
     </div>
 </body>
+
 </html>
