--- a/thanks.html
+++ b/thanks.html
@@ -1,42 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript"
+        src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
+    <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscription Successful! | SnapMark</title>
     <style>
         /* --- (Your CSS styles remain unchanged, omitted here for brevity) --- */
-        :root { --primary-color: #0078d4; --dark-text: #2d3748; --light-text: #4a5568; --background-color: #f7fafc; --card-background: #ffffff; --border-color: #e2e8f0; }
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; margin: 0; background-color: var(--background-color); color: var(--dark-text); line-height: 1.7; }
-        .container { max-width: 960px; margin: 0 auto; padding: 0 20px; }
-        section { padding: 60px 0; }
-        h2 { font-size: 2rem; text-align: center; margin-bottom: 40px; }
-        p { font-size: 1.1rem; color: var(--light-text); }
-        a { color: var(--primary-color); text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        .success-section { padding-top: 80px; padding-bottom: 80px; text-align: center; }
-        .success-card { max-width: 600px; margin: 0 auto; background-color: var(--card-background); border: 1px solid var(--border-color); border-radius: 10px; padding: 40px; box-shadow: 0 15px 30px rgba(0,0,0,0.08); text-align: left; }
-        .success-card h2 { text-align: center; color: var(--primary-color); margin-bottom: 25px; font-size: 2.2rem; }
-        .success-card p { font-size: 1.15rem; margin-bottom: 15px; }
-        .success-details ul { list-style: none; padding: 0; margin: 30px 0; border-top: 1px solid var(--border-color); padding-top: 20px; }
-        .success-details ul li { margin-bottom: 10px; font-size: 1.05rem; display: flex; align-items: center; }
-        .success-details ul li strong { display: inline-block; min-width: 140px; color: var(--dark-text); }
-        .next-steps { margin-top: 40px; text-align: center; }
-        .cta-link { display: inline-block; background-color: var(--primary-color); color: #fff; padding: 15px 30px; border-radius: 8px; font-size: 1.1rem; font-weight: 700; text-decoration: none; transition: background-color 0.2s; }
-        .cta-link:hover { background-color: #005a9e; text-decoration: none; }
-        footer { background-color: #e2e8f0; color: var(--light-text); text-align: center; padding: 40px 20px; font-size: 0.9rem; }
-        footer p { margin: 0 0 10px 0; font-size: 0.9rem; }
-        footer a { color: var(--light-text); font-weight: 600; }
-        @media (max-width: 768px) { .success-card { padding: 30px 20px; } }
+        :root {
+            --primary-color: #0078d4;
+            --dark-text: #2d3748;
+            --light-text: #4a5568;
+            --background-color: #f7fafc;
+            --card-background: #ffffff;
+            --border-color: #e2e8f0;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            margin: 0;
+            background-color: var(--background-color);
+            color: var(--dark-text);
+            line-height: 1.7;
+        }
+
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        section {
+            padding: 60px 0;
+        }
+
+        h2 {
+            font-size: 2rem;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            color: var(--light-text);
+        }
+
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .success-section {
+            padding-top: 80px;
+            padding-bottom: 80px;
+            text-align: center;
+        }
+
+        .success-card {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: var(--card-background);
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+            padding: 40px;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.08);
+            text-align: left;
+        }
+
+        .success-card h2 {
+            text-align: center;
+            color: var(--primary-color);
+            margin-bottom: 25px;
+            font-size: 2.2rem;
+        }
+
+        .success-card p {
+            font-size: 1.15rem;
+            margin-bottom: 15px;
+        }
+
+        .success-details ul {
+            list-style: none;
+            padding: 0;
+            margin: 30px 0;
+            border-top: 1px solid var(--border-color);
+            padding-top: 20px;
+        }
+
+        .success-details ul li {
+            margin-bottom: 10px;
+            font-size: 1.05rem;
+            display: flex;
+            align-items: center;
+        }
+
+        .success-details ul li strong {
+            display: inline-block;
+            min-width: 140px;
+            color: var(--dark-text);
+        }
+
+        .next-steps {
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .cta-link {
+            display: inline-block;
+            background-color: var(--primary-color);
+            color: #fff;
+            padding: 15px 30px;
+            border-radius: 8px;
+            font-size: 1.1rem;
+            font-weight: 700;
+            text-decoration: none;
+            transition: background-color 0.2s;
+        }
+
+        .cta-link:hover {
+            background-color: #005a9e;
+            text-decoration: none;
+        }
+
+        footer {
+            background-color: #e2e8f0;
+            color: var(--light-text);
+            text-align: center;
+            padding: 40px 20px;
+            font-size: 0.9rem;
+        }
+
+        footer p {
+            margin: 0 0 10px 0;
+            font-size: 0.9rem;
+        }
+
+        footer a {
+            color: var(--light-text);
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            .success-card {
+                padding: 30px 20px;
+            }
+        }
     </style>
 </head>
+
 <body>
 
     <section class="success-section">
         <div class="container">
             <div class="success-card">
                 <h2>🎉 Subscription Successful!</h2>
-                <p>Thank you for subscribing to SnapMark Pro! We have sent your <strong>license key</strong> and <strong>order receipt</strong> to your email address. Please check your inbox and get started!</p>
+                <p>Thank you for subscribing to SnapMark Pro! We have sent your <strong>license key</strong> and
+                    <strong>order receipt</strong> to your email address. Please check your inbox and get started!
+                </p>
 
                 <div class="success-details">
                     <ul>
@@ -45,9 +173,10 @@
                         <li><strong>Order ID:</strong> <span id="transactionId"></span></li>
                     </ul>
                 </div>
-                
+
                 <div class="next-steps">
-                    <a href="https://apps.microsoft.com/store/detail/9PMB1X34Z40F?cid=DevShareMCLPCS" class="cta-link">Download the App Now</a>
+                    <a href="https://apps.microsoft.com/store/detail/9PMB1X34Z40F?cid=DevShareMCLPCS"
+                        class="cta-link">Download the App Now</a>
                 </div>
             </div>
         </div>
@@ -60,7 +189,7 @@
     </footer>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             // Parse parameters from the URL
             const params = new URLSearchParams(window.location.search);
             const transactionId = params.get('transaction_id');
@@ -77,4 +206,5 @@
     </script>
 
 </body>
+
 </html>
