--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript"
+        src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
+    <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | SnapMark</title>
@@ -13,6 +18,7 @@
             --card-background: #ffffff;
             --border-color: #e2e8f0;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             margin: 0;
@@ -21,6 +27,7 @@
             color: var(--dark-text);
             line-height: 1.8;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -29,32 +36,42 @@
             border-radius: 10px;
             padding: 20px 40px 40px 40px;
         }
-        h1, h2, h3 {
+
+        h1,
+        h2,
+        h3 {
             color: var(--dark-text);
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 15px;
             margin-top: 30px;
         }
+
         h1 {
             text-align: center;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 1rem;
             color: var(--light-text);
         }
+
         a {
             color: var(--primary-color);
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
         .meta-info {
             text-align: center;
             font-size: 0.9rem;
             color: #718096;
             margin-bottom: 30px;
         }
+
         code {
             background-color: #e2e8f0;
             padding: 2px 5px;
@@ -63,59 +80,84 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
         <p class="meta-info">Last updated: August 1, 2025</p>
 
         <h3>Introduction</h3>
-        <p>Welcome to SnapMark! We respect your privacy and are committed to protecting your personal data. This privacy policy will inform you as to how we look after your personal data when you visit our website or use our services, and tell you about your privacy rights and how the law protects you.</p>
+        <p>Welcome to SnapMark! We respect your privacy and are committed to protecting your personal data. This privacy
+            policy will inform you as to how we look after your personal data when you visit our website or use our
+            services, and tell you about your privacy rights and how the law protects you.</p>
 
         <h2>1. The Types of Data We Collect</h2>
         <p>We may collect, use, store, and transfer different kinds of personal data about you as follows:</p>
         <ul>
             <li><strong>Identity Data</strong>: Includes your email address.</li>
-            <li><strong>Transaction Data</strong>: Includes details of your purchases, a summary of payment information (e.g., the last four digits of your credit card, card type). Please note that complete payment information is processed by our payment processor, Paddle, and we do not store your full credit card information.</li>
-            <li><strong>Technical Data</strong>: Includes your IP address, browser type and version, time zone setting and location, operating system and platform, and other technology on the devices you use to access this website.</li>
+            <li><strong>Transaction Data</strong>: Includes details of your purchases, a summary of payment information
+                (e.g., the last four digits of your credit card, card type). Please note that complete payment
+                information is processed by our payment processor, Paddle, and we do not store your full credit card
+                information.</li>
+            <li><strong>Technical Data</strong>: Includes your IP address, browser type and version, time zone setting
+                and location, operating system and platform, and other technology on the devices you use to access this
+                website.</li>
             <li><strong>Usage Data</strong>: Includes information about how you use our website and services.</li>
         </ul>
 
         <h2>2. How We Collect Your Data</h2>
         <p>We use different methods to collect data from and about you including through:</p>
         <ul>
-            <li><strong>Direct interactions</strong>: You may give us your Identity Data by purchasing our products, contacting us for support, or subscribing to our newsletter.</li>
-            <li><strong>Automated technologies or interactions</strong>: As you interact with our website, we may automatically collect Technical Data. We collect this data by using cookies and other similar technologies.</li>
-            <li><strong>Third-party sources</strong>: We receive Transaction Data from our payment partner, Paddle.com. When you make a purchase, you will provide your payment information directly to Paddle.</li>
+            <li><strong>Direct interactions</strong>: You may give us your Identity Data by purchasing our products,
+                contacting us for support, or subscribing to our newsletter.</li>
+            <li><strong>Automated technologies or interactions</strong>: As you interact with our website, we may
+                automatically collect Technical Data. We collect this data by using cookies and other similar
+                technologies.</li>
+            <li><strong>Third-party sources</strong>: We receive Transaction Data from our payment partner, Paddle.com.
+                When you make a purchase, you will provide your payment information directly to Paddle.</li>
         </ul>
 
         <h2>3. How We Use Your Data</h2>
-        <p>We will only use your personal data when the law allows us to. Most commonly, we will use your personal data in the following circumstances:</p>
+        <p>We will only use your personal data when the law allows us to. Most commonly, we will use your personal data
+            in the following circumstances:</p>
         <ul>
             <li>To process and manage your purchase orders and licenses.</li>
             <li>To send you product updates, welcome emails, and customer support messages.</li>
-            <li>To manage our relationship with you, which includes notifying you about changes to our terms or privacy policy.</li>
+            <li>To manage our relationship with you, which includes notifying you about changes to our terms or privacy
+                policy.</li>
             <li>To improve our website, products, services, marketing, and customer relationships.</li>
         </ul>
 
         <h2>4. Data Sharing and Disclosure</h2>
-        <p>We do not sell your personal data to any third party. However, we may need to share your data with the following third parties to provide our services:</p>
+        <p>We do not sell your personal data to any third party. However, we may need to share your data with the
+            following third parties to provide our services:</p>
         <ul>
-            <li><strong>Paddle.com</strong>: Our online reseller and payment processor, responsible for processing your payments and subscriptions. You can review <a href="https://www.paddle.com/legal/privacy" target="_blank" rel="noopener noreferrer">Paddle's Privacy Policy</a>.</li>
-            <li><strong>Google Cloud</strong>: Our backend services (including Cloud Functions and Firestore database) are hosted on Google Cloud Platform.</li>
-            <li><strong>Resend / Zoho Mail</strong>: The service providers we use to send transactional and support emails.</li>
+            <li><strong>Paddle.com</strong>: Our online reseller and payment processor, responsible for processing your
+                payments and subscriptions. You can review <a href="https://www.paddle.com/legal/privacy"
+                    target="_blank" rel="noopener noreferrer">Paddle's Privacy Policy</a>.</li>
+            <li><strong>Google Cloud</strong>: Our backend services (including Cloud Functions and Firestore database)
+                are hosted on Google Cloud Platform.</li>
+            <li><strong>Resend / Zoho Mail</strong>: The service providers we use to send transactional and support
+                emails.</li>
         </ul>
 
         <h2>5. Data Security</h2>
-        <p>We have put in place appropriate security measures to prevent your personal data from being accidentally lost, used or accessed in an unauthorized way, altered, or disclosed. We limit access to your personal data to those employees and partners who have a business need to know.</p>
+        <p>We have put in place appropriate security measures to prevent your personal data from being accidentally
+            lost, used or accessed in an unauthorized way, altered, or disclosed. We limit access to your personal data
+            to those employees and partners who have a business need to know.</p>
 
         <h2>6. Your Legal Rights</h2>
-        <p>Depending on your region (e.g., under the GDPR in the European Union), you have a range of rights in relation to your personal data, including the right to access, correct, erase your data, or withdraw consent. If you wish to exercise any of these rights, please contact us.</p>
-        
+        <p>Depending on your region (e.g., under the GDPR in the European Union), you have a range of rights in relation
+            to your personal data, including the right to access, correct, erase your data, or withdraw consent. If you
+            wish to exercise any of these rights, please contact us.</p>
+
         <h2>7. Contact Us</h2>
-        <p>If you have any questions about this privacy policy or our privacy practices, please do not hesitate to contact us at:</p>
+        <p>If you have any questions about this privacy policy or our privacy practices, please do not hesitate to
+            contact us at:</p>
         <p style="text-align: center; margin: 20px 0;">
             <a href="mailto:support@whatsnapai.com"><strong>support@whatsnapai.com</strong></a>
         </p>
     </div>
 </body>
+
 </html>
