--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript"
+        src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
+    <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service | SnapMark</title>
