--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <script id="cookieyes" type="text/javascript"
     src="https://cdn-cookieyes.com/client_data/79a4ec383fba80610d5c70b6/script.js"></script>
   <!-- End cookieyes banner -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-N8KC45N5');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <title>SnapMark | OCR Tool to Convert Screenshots to LaTeX, Markdown & More</title>
 
@@ -398,7 +408,10 @@
 </head>
 
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8KC45N5" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <main>
     <section class="hero container">
       <h1>Extract Text & Formulas from any Screenshot</h1>
